<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".ui.activitys.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movieBanner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_banner"/>

        <TextView
            android:id="@+id/voteAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/adultContent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/adultContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            android:text="@string/_18"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="#000000"
            android:background="#ff0000"
            app:layout_constraintBottom_toBottomOf="@id/movieBanner"
            app:layout_constraintEnd_toEndOf="@id/voteAverage"
            app:layout_constraintStart_toStartOf="@id/voteAverage"/>

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="160dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_poster"/>

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/movieRealTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/moviePoster"
            app:layout_constraintTop_toBottomOf="@+id/movieBanner" />

        <TextView
            android:id="@+id/movieRealTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/movieGenre"
            app:layout_constraintEnd_toEndOf="@id/movieTitle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/movieTitle"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

        <TextView
            android:id="@+id/movieGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/movieRelease"
            app:layout_constraintEnd_toEndOf="@id/movieRealTitle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/movieRealTitle"
            app:layout_constraintTop_toBottomOf="@+id/movieRealTitle" />

        <TextView
            android:id="@+id/movieRelease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/moviePoster"
            app:layout_constraintEnd_toEndOf="@id/movieGenre"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/movieGenre"
            app:layout_constraintTop_toBottomOf="@+id/movieGenre" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#353839"
            app:layout_constraintTop_toBottomOf="@id/moviePoster" />

        <TextView
            android:id="@+id/classification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/votes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <TextView
            android:id="@+id/votes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/classification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/classification"
            app:layout_constraintTop_toTopOf="@+id/classification" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#353839"
            app:layout_constraintTop_toBottomOf="@id/votes" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="24dp"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/votes"
            app:layout_constraintStart_toStartOf="@+id/moviePoster"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <LinearLayout
            android:id="@+id/videosList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="42dp"
            app:layout_constraintTop_toBottomOf="@id/overview"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <include
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/progress_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>